# jujutsuhunters

./: hunters-game.js  hunters.html  index.html  package-lock.json  package.json
.github/workflows/: build-desktop.yml
desktop/: CMakeLists.txt  README.md  app.rc  build.bat  main.cpp
docs/superpowers/plans/: 2026-04-29-electron-multiplatform-build.md
docs/superpowers/specs/: 2026-04-29-electron-multiplatform-build-design.md
electron/: generate-icons.js  icon-placeholder.txt  icon.icns  main.js  package-lock.json  package.json  preload.js
